<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/summaryCountry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/unit_m"
    android:background="@color/purple_dark"
    android:padding="@dimen/unit_l">

    <TextView
        android:id="@+id/textCountryOrState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_country_india"
        android:textColor="@color/off_white"
        android:textSize="@dimen/text_size_subtitle"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_country_india"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/text_size_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCountryOrState" />

    <ImageButton
        android:id="@+id/btnRemoveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/btn_description_delete_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_clear_white_18dp" />

    <!-- Confirmed Card -->
    <LinearLayout
        android:id="@+id/confirmedCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/unit_l"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_card_style"
        android:orientation="vertical"
        android:paddingTop="@dimen/unit_m"
        android:paddingBottom="@dimen/unit_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recoveredCard"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLastUpdated">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_confirmed"
            android:textColor="@color/off_white"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/str_today"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textConfirmedToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_blank"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelToday" />

            <TextView
                android:id="@+id/labelTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/str_total"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textConfirmedToday" />

            <TextView
                android:id="@+id/textConfirmedTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_blank"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <!-- End Confirmed Card -->

    <!-- Recovered Card -->
    <LinearLayout
        android:id="@+id/recoveredCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_card_style"
        android:backgroundTint="@color/blue_dark"
        android:orientation="vertical"
        android:paddingTop="@dimen/unit_m"
        android:paddingBottom="@dimen/unit_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deceasedCard"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toEndOf="@+id/confirmedCard"
        app:layout_constraintTop_toBottomOf="@+id/textLastUpdated">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_recovered"
            android:textColor="@color/off_white"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelRecoveredToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/str_today"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textRecoveredToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_blank"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelRecoveredToday" />

            <TextView
                android:id="@+id/labelRecoveredTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/str_total"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRecoveredToday" />

            <TextView
                android:id="@+id/textRecoveredTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_blank"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelRecoveredTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <!-- End Recovered Card -->

    <!-- Deceased Card -->
    <LinearLayout
        android:id="@+id/deceasedCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_card_style"
        android:backgroundTint="@color/red_dark"
        android:orientation="vertical"
        android:paddingTop="@dimen/unit_m"
        android:paddingBottom="@dimen/unit_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toEndOf="@+id/recoveredCard"
        app:layout_constraintTop_toBottomOf="@+id/textLastUpdated">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_deceased"
            android:textColor="@color/off_white"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelDeceasedToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/str_today"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textDeceasedToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_blank"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelDeceasedToday" />

            <TextView
                android:id="@+id/labelDeceasedTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/str_total"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDeceasedToday" />

            <TextView
                android:id="@+id/textDeceasedTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_blank"
                android:textColor="@color/off_white"
                android:textSize="@dimen/text_size_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelDeceasedTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- End Deceased Card -->
</androidx.constraintlayout.widget.ConstraintLayout>